--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="textDarkPrimary">#DE000000</color>
+    <color name="textDarkSecondary">#8A000000</color>
+    <color name="textDarkDisabled">#61000000</color>
+
+    <color name="transparentPrimary">#336200EE</color>
 </resources>
