--- a/app/src/main/res/drawable/rounded_corners_layout.xml
+++ b/app/src/main/res/drawable/rounded_corners_layout.xml
@@ -4,5 +4,5 @@
     <corners
         android:topLeftRadius="20dp"
         android:topRightRadius="20dp" />
-    <solid android:color="@android:color/white" />
+    <solid android:color="@color/transparentWhite" />
 </shape>
