--- a/app/src/main/res/layout/fragment_volunteer.xml
+++ b/app/src/main/res/layout/fragment_volunteer.xml
@@ -123,7 +123,7 @@
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_marginTop="40dp"
-        android:enabled="true"
+        android:enabled="false"
         android:text="@string/add_volunteer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
