--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -26,7 +26,7 @@
         app:menu_icon="@drawable/fab_add">
 
         <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/add_people_help"
+            android:id="@+id/add_endangered_people_people"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_people_white_24dp"
