Continue implementing detail screen UI

--- a/app/src/main/res/layout/fragment_person_detail.xml
+++ b/app/src/main/res/layout/fragment_person_detail.xml
@@ -1,8 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/map_fragment_person_detail"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:context="com.fightcorona.main.fragments.MapFragment" />
+
+    <TextView
+        android:id="@+id/last_visited_label"
+        style="@style/NormalText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/last_visited"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/map_fragment_person_detail"
+        tools:text="Last visited:" />
+
+    <TextView
+        android:id="@+id/last_visited_value"
+        style="@style/DescriptionText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:text="24th March 2020"
+        app:layout_constraintBottom_toBottomOf="@id/last_visited_label"
+        app:layout_constraintStart_toEndOf="@id/last_visited_label"
+        tools:text="24th March 2020" />
+
+    <TextView
+        android:id="@+id/required_label"
+        style="@style/NormalText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="@string/required"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/last_visited_label" />
+
+    <TextView
+        android:id="@+id/required_value"
+        style="@style/DescriptionText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="16dp"
+        android:text="Secer, brasno, ulje, jaja, lekovi, kvasac, grickalice, slatkisi"
+        app:layout_constraintBottom_toBottomOf="@id/required_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/required_label"
+        app:layout_constraintTop_toTopOf="@id/required_label" />
+
+    <TextView
+        android:id="@+id/last_visit_comment_label"
+        style="@style/NormalText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="22dp"
+        android:text="@string/volunteer_who_visited_this_person_last_wrote"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/required_label"
+        tools:text="Volunteer who visited this person last wrote:" />
+
+    <TextView
+        android:id="@+id/last_visit_comment_value"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_margin="12dp"
+        android:background="@drawable/bubble_text"
+        android:padding="8dp"
+        android:text="Baba i deda su u redu, sve cool. Potrebno im je to to to to i to"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/last_visit_comment_label"
+        tools:text="Baba i deda su u redu, sve cool. Potrebno im je to to to to i to" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:drawableStart="@drawable/ic_comment_purple_24dp"
+        android:gravity="center"
+        android:text="@string/view_all_feedback"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/last_visit_comment_value" />
 
     <Button
         android:id="@+id/button_person_visited"
@@ -12,7 +107,6 @@
         android:text="@string/visited"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
