--- a/app/src/main/res/layout/fragment_person_detail.xml
+++ b/app/src/main/res/layout/fragment_person_detail.xml
@@ -42,24 +42,45 @@
             tools:text="24th March 2020" />
 
         <TextView
+            android:id="@+id/address_label"
+            style="@style/NormalText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="@string/address_label"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/last_visited_label" />
+
+        <TextView
+            android:id="@+id/address_value"
+            style="@style/DescriptionText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintBottom_toBottomOf="@id/address_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/address_label"
+            app:layout_constraintTop_toTopOf="@id/address_label"
+            tools:text="Cara Lazara 87/14" />
+
+        <TextView
             android:id="@+id/required_label"
             style="@style/NormalText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="@string/required"
+            android:text="@string/notes"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/last_visited_label" />
+            app:layout_constraintTop_toBottomOf="@id/address_label" />
 
         <TextView
-            android:id="@+id/required_value"
+            android:id="@+id/notes_value"
             style="@style/DescriptionText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
-            android:layout_marginTop="6dp"
             android:layout_marginEnd="16dp"
-            android:text="Secer, brasno, ulje, jaja, lekovi, kvasac, grickalice, slatkisi"
             app:layout_constraintBottom_toBottomOf="@id/required_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/required_label"
@@ -84,7 +105,6 @@
             android:layout_margin="12dp"
             android:background="@drawable/bubble_text"
             android:padding="8dp"
-            android:text="Baba i deda su u redu, sve cool. Potrebno im je to to to to i to"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/last_visit_comment_label"
