--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,6 +55,17 @@
         <item name="android:layout_marginBottom">16dp</item>
     </style>
 
+    <style name="LogoutButton" parent="Widget.AppCompat.Button">
+        <item name="android:textSize">16sp</item>
+        <item name="rippleColor">@android:color/white</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="backgroundTint">@color/logout_red</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+        <item name="android:layout_marginBottom">16dp</item>
+    </style>
+
     <style name="NormalText" parent="Widget.AppCompat.TextView">
         <item name="android:textColor">@color/textDarkSecondary</item>
         <item name="fontFamily">@font/roboto</item>
