Change package name and create new google services json

--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -5,7 +5,7 @@
 
     <fragment
         android:id="@+id/mapFragment"
-        android:name="com.fightcorona.main.fragments.MapFragment"
+        android:name="com.fightcovid.main.fragments.MapFragment"
         android:label="MapFragment" >
         <action
             android:id="@+id/action_mapFragment_to_chooseAddressFragment"
@@ -23,7 +23,7 @@
     </fragment>
     <dialog
         android:id="@+id/volunteerFragment"
-        android:name="com.fightcorona.main.fragments.AddNewPersonFragment"
+        android:name="com.fightcovid.main.fragments.AddNewPersonFragment"
         android:label="VolunteerFragment" >
         <argument
             android:name="latitude"
@@ -33,22 +33,22 @@
             app:argType="float" />
         <argument
             android:name="peopleType"
-            app:argType="com.fightcorona.main.PeopleType" />
+            app:argType="com.fightcovid.main.PeopleType" />
     </dialog>
     <fragment
         android:id="@+id/chooseAddressFragment"
-        android:name="com.fightcorona.main.fragments.ChooseAddressFragment"
+        android:name="com.fightcovid.main.fragments.ChooseAddressFragment"
         android:label="ChooseAddressFragment" >
         <action
             android:id="@+id/action_chooseAddressFragment_to_volunteerFragment"
             app:destination="@id/volunteerFragment" />
         <argument
             android:name="peopleType"
-            app:argType="com.fightcorona.main.PeopleType" />
+            app:argType="com.fightcovid.main.PeopleType" />
     </fragment>
     <fragment
         android:id="@+id/endangeredDetailFragment2"
-        android:name="com.fightcorona.main.fragments.DetailFragment"
+        android:name="com.fightcovid.main.fragments.DetailFragment"
         android:label="EndangeredDetailFragment" >
         <argument
             android:name="id"
@@ -68,11 +68,11 @@
     </fragment>
     <dialog
         android:id="@+id/allFeedbacksFragment"
-        android:name="com.fightcorona.main.fragments.AllFeedbacksFragment"
+        android:name="com.fightcovid.main.fragments.AllFeedbacksFragment"
         android:label="AllFeedbacksFragment" />
     <dialog
         android:id="@+id/createVisitFragment"
-        android:name="com.fightcorona.main.fragments.CreateVisitFragment"
+        android:name="com.fightcovid.main.fragments.CreateVisitFragment"
         android:label="CreateVisitFragment" >
         <argument
             android:name="poiId"
@@ -80,6 +80,6 @@
     </dialog>
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.fightcorona.main.fragments.SettingsFragment"
+        android:name="com.fightcovid.main.fragments.SettingsFragment"
         android:label="SettingsFragment" />
 </navigation>
