--- a/app/src/main/res/layout/fragment_choose_address.xml
+++ b/app/src/main/res/layout/fragment_choose_address.xml
@@ -35,7 +35,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_description"
-        tools:context="com.fightcorona.main.fragments.ChooseAddressFragment" />
+        tools:context="com.fightcovid.main.fragments.ChooseAddressFragment" />
 
     <ImageView
         android:id="@+id/location_pin"
