--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:context="com.fightcorona.main.fragments.MapFragment" />
+        tools:context="com.fightcovid.main.fragments.MapFragment" />
 
     <com.github.clans.fab.FloatingActionMenu
         android:layout_width="wrap_content"
