Finish UI for volunteer detail screen

--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -51,7 +51,7 @@
     </fragment>
     <fragment
         android:id="@+id/endangeredDetailFragment2"
-        android:name="com.fightcovid.main.fragments.DetailFragment"
+        android:name="com.fightcovid.main.fragments.EndangeredDetailFragment"
         android:label="EndangeredDetailFragment" >
         <argument
             android:name="id"
