--- a/app/src/main/res/layout/fragement_volunteer_detail.xml
+++ b/app/src/main/res/layout/fragement_volunteer_detail.xml
@@ -6,22 +6,26 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/volunteer_title"
-        style="@style/TitleText"
-        android:layout_width="wrap_content"
+        android:id="@+id/description"
+        style="@style/NormalText"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/volunteer_details"
+        android:layout_marginTop="16dp"
+        android:text="@string/here_you_can_find_detailed_information_about_volunteer"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Here you can find detailed information about volunteer." />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/volunteer_profile_image"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_margin="16dp"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/volunteer_title"
+        app:layout_constraintTop_toBottomOf="@id/description"
         tools:background="@drawable/com_facebook_profile_picture_blank_square" />
 
     <TextView
@@ -30,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/name"
+        app:layout_constraintBottom_toBottomOf="@id/volunteer_profile_image"
         app:layout_constraintStart_toEndOf="@id/volunteer_profile_image"
         app:layout_constraintTop_toTopOf="@id/volunteer_profile_image" />
 
@@ -44,30 +49,85 @@
         tools:text="Perica" />
 
     <TextView
-        android:id="@+id/email_title"
+        android:id="@+id/description_detail"
+        style="@style/DescriptionText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/please_contact_volunteer_only_if_s_absolutely_necessary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/volunteer_profile_image" />
+
+    <TextView
+        android:id="@+id/phone_label"
         style="@style/NormalText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="@string/email_label"
-        app:layout_constraintStart_toEndOf="@id/volunteer_profile_image"
-        app:layout_constraintTop_toBottomOf="@id/name_title" />
+        android:layout_marginTop="32dp"
+        android:text="@string/phone_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/description_detail" />
 
     <TextView
-        android:id="@+id/email_value"
+        android:id="@+id/phone_value"
         style="@style/DescriptionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        app:layout_constraintBottom_toBottomOf="@id/email_title"
-        app:layout_constraintStart_toEndOf="@id/email_title"
-        tools:text="aleksamarkoni@gmail.com" />
+        android:layout_marginTop="32dp"
+        android:text="1234567891"
+        app:layout_constraintBottom_toBottomOf="@id/phone_label"
+        app:layout_constraintStart_toEndOf="@id/phone_label"
+        tools:text="+381 64 27 15 393" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+    <ImageView
+        android:id="@+id/call_volunteer_button"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginEnd="64dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="@id/phone_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/phone_label"
+        app:srcCompat="@drawable/ic_phone_purple_24dp" />
+
+    <TextView
+        android:id="@+id/email_label"
+        style="@style/NormalText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/email_label"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/volunteer_profile_image"
-        android:background="@drawable/ic_phone_purple_24dp" />
+        app:layout_constraintTop_toBottomOf="@id/phone_label" />
+
+    <TextView
+        android:id="@+id/email_value_text"
+        style="@style/DescriptionText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="32dp"
+        android:text="blabla@mailinator.com"
+        app:layout_constraintBottom_toBottomOf="@id/email_label"
+        app:layout_constraintStart_toEndOf="@id/email_label" />
+
+    <ImageView
+        android:id="@+id/email_volunteer_button"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginEnd="64dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="@id/email_value_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/email_value_text"
+        app:srcCompat="@drawable/ic_email_black_24dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
