--- a/app/src/main/res/layout/fragment_person_detail.xml
+++ b/app/src/main/res/layout/fragment_person_detail.xml
@@ -36,7 +36,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
-            android:text="24th March 2020"
             app:layout_constraintBottom_toBottomOf="@id/last_visited_label"
             app:layout_constraintStart_toEndOf="@id/last_visited_label"
             tools:text="24th March 2020" />
@@ -118,6 +117,7 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
             android:drawableStart="@drawable/ic_comment_purple_24dp"
+            android:focusable="true"
             android:gravity="center"
             android:text="@string/view_all_feedback"
             app:layout_constraintEnd_toEndOf="parent"
@@ -130,7 +130,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:text="@string/visited"
+            android:text="@string/create_visit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
