--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="transparentGray">#33808080</color>
     <color name="red">#FF0000</color>
     <color name="logout_red">#ED2939</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="light_gray">#d3d3d3</color>
 </resources>
