Add code to fetch all notes for a single poi

--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -75,7 +75,11 @@
     <dialog
         android:id="@+id/allFeedbacksFragment"
         android:name="com.covidvolonter.main.fragments.AllFeedbacksFragment"
-        android:label="AllFeedbacksFragment" />
+        android:label="AllFeedbacksFragment" >
+        <argument
+            android:name="poiId"
+            app:argType="integer" />
+    </dialog>
     <dialog
         android:id="@+id/createVisitFragment"
         android:name="com.covidvolonter.main.fragments.CreateVisitFragment"
