--- a/app/src/main/res/layout/visit_feedback_item.xml
+++ b/app/src/main/res/layout/visit_feedback_item.xml
@@ -5,26 +5,38 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image_feedback_item"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_margin="16dp"
-        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/feedback_text_description"
+        android:id="@+id/feedback_creator_name"
         style="@style/NormalText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@id/feedback_description_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/profile_image_feedback_item"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Sve je ok sa osobom" />
+
+    <TextView
+        android:id="@+id/feedback_description_text"
+        style="@style/DescriptionText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@id/feedback_date_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/feedback_creator_name"
+        app:layout_constraintTop_toBottomOf="@id/feedback_creator_name" />
 
     <TextView
         android:id="@+id/feedback_date_text"
@@ -32,8 +44,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        app:layout_constraintStart_toStartOf="@id/feedback_text_description"
-        app:layout_constraintTop_toBottomOf="@id/feedback_text_description"
-        tools:text="20.03.2020." />
+        android:layout_marginBottom="16dp"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/feedback_description_text"
+        app:layout_constraintTop_toBottomOf="@id/feedback_description_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
