--- a/app/src/main/res/menu/settings_menu.xml
+++ b/app/src/main/res/menu/settings_menu.xml
@@ -14,6 +14,11 @@
                 android:icon="@drawable/ic_settings_purple_24dp"
                 android:title="@string/settings" />
 
+            <item
+                android:id="@+id/help"
+                android:icon="@drawable/ic_help_purple_24dp"
+                android:title="@string/help" />
+
         </menu>
     </item>
 </menu>
